--- a/translations/kangyur/translations/064-005_toh235,657,1063-the_great_cloud_2.xml
+++ b/translations/kangyur/translations/064-005_toh235,657,1063-the_great_cloud_2.xml
@@ -24,7 +24,7 @@
         <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -83,7 +83,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-04T19:36:58.966Z" user="admin">04/01/2023 19:36:58</note>
+        <note type="lastUpdated" date-time="2023-01-05T10:21:48.195Z" user="admin">05/01/2023 10:21:48</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
           increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-03T09:47:34.283Z" user="line-tofte">2.h</note>
@@ -119,6 +119,7 @@
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-31T13:06:22.436Z" user="line-tofte">Auto
           (update-publication-status)</note>
           <note type="updated" update="text-version" value="0.0.3" date-time="2023-01-04T19:36:56.058Z" user="john">The title from the colophon added as the long title for better identification, with adjustments to summary, introduction, and colophon. "Whirlwind" replaced by "array of winds" as suggested by Wiesiek's comments.</note>
+          <note type="updated" update="text-version" value="0.0.4" date-time="2023-01-05T10:21:45.276Z" user="john">Further small edits to summary.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -133,8 +134,8 @@
         <p tid="2">This brief discourse is identified more precisely in its colophon as a supplementary chapter from <title xml:lang="en">The Great Cloud</title> 
           on “the array of winds that bring down rainfall.” It describes a visit from the Buddha Śākyamuni to the realm of the nāgas. The assembly of nāgas pays homage
           to the Buddha with a grand panoply of magically emanated offerings, and their king asks him to explain how the nāgas can eliminate their
-          own suffering and aid sentient beings by causing rain to fall and crops to grow. The Buddha, in response, extols the benefits of
-          loving-kindness and then teaches them a dhāraṇī that when accompanied by the recitation of a host of buddha names will pacify the nāgas’
+          own suffering and aid sentient beings by causing timely rain to fall. The Buddha, in response, extols the benefits of
+          loving-kindness and then teaches them a dhāraṇī that when accompanied by the recitation of a host of buddha names will dispel the nāgas’
           suffering and cause crops to grow. At the nāga king’s request, the Buddha then teaches another long dhāraṇī that will cause rain to fall during times of drought. 
           The discourse concludes with instructions for constructing an altar and holding a ritual rainmaking service.</p>
       </div>
