--- a/translations/kangyur/placeholders/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/placeholders/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -17,9 +17,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
                 <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2019</date>
+                <edition>v 0.0.11 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-16T13:54:25.917Z" user="admin">16/09/2022 13:54:25</note>
+                <note type="lastUpdated" date-time="2023-01-05T13:38:18.806Z" user="admin">05/01/2023 13:38:18</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -56,6 +57,7 @@
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-08-01T12:02:53.954Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-08-01T12:02:53.954Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-09-16T13:54:17.867Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-01-05T13:38:13.259Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
