--- a/translations/kangyur/placeholders/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/placeholders/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -20,11 +20,11 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2019</date>
+                <edition>v 0.0.12 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-072-011"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-05T13:38:18.806Z" user="admin">05/01/2023 13:38:18</note>
+                <note type="lastUpdated" date-time="2023-01-06T08:57:39.107Z" user="admin">06/01/2023 08:57:39</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -58,6 +58,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-08-01T12:02:53.954Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-09-16T13:54:17.867Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-01-05T13:38:13.259Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-01-06T08:57:33.628Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-01-06T08:57:33.628Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
