--- a/translations/kangyur/translations/064-005_toh235,657,1063-the_great_cloud_2.xml
+++ b/translations/kangyur/translations/064-005_toh235,657,1063-the_great_cloud_2.xml
@@ -25,7 +25,7 @@
         <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -84,7 +84,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-05T17:32:41.674Z" user="admin">05/01/2023 17:32:41</note>
+        <note type="lastUpdated" date-time="2023-01-07T14:31:58.341Z" user="admin">07/01/2023 14:31:58</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
           increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-03T09:47:34.283Z" user="line-tofte">2.h</note>
@@ -127,6 +127,7 @@
         <note type="updated" update="translation-status" value="1" date-time="2023-01-05T14:41:32.582Z" user="laura">1</note>
         <note type="updated" update="text-version" value="1.0.0" date-time="2023-01-05T14:41:32.582Z" user="laura">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2023-01-05T17:32:38.81Z" user="laura">Removed sponsorship placeholder</note>
+          <note type="updated" update="text-version" value="1.0.2" date-time="2023-01-07T14:31:55.47Z" user="andre">Glossary matching revised - activated in CG</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -948,7 +949,7 @@
             Library, ref. <ref target="https://eap.bl.uk/archive-file/EAP676-16-2">EAP676/16/2</ref>.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item tid="143">
                         <gloss type="term" xml:id="UT22084-064-005-152">
@@ -1329,22 +1330,22 @@
             </gloss>
                     </item>
           <item tid="182">
-                        <gloss type="person" xml:id="UT22084-064-005-192">
-              <term>Upananda</term>
-              <term xml:lang="Bo-Ltn" status="verified">dga’ bo </term>
-              <term xml:lang="bo">དགའ་བོ།</term>
-              <term xml:lang="Sa-Ltn" status="verified">Upaanda</term>
-              <term type="definition">A nāga king present in the assembly of the Buddha Śākyamuni.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-064-005-192" type="person" mode="match">
+                            <term>Upananda</term>
+                            <term xml:lang="Bo-Ltn" status="verified">nye dga’ bo</term>
+                            <term xml:lang="bo">ཉེ་དགའ་བོ།</term>
+                            <term xml:lang="Sa-Ltn" status="verified">Upananda</term>
+                            <term type="definition">A nāga king present in the assembly of the Buddha Śākyamuni.</term>
+                        </gloss>
                     </item>
           <item tid="183">
-                        <gloss type="person" xml:id="UT22084-064-005-193">
-              <term>Nanda</term>
-              <term xml:lang="Bo-Ltn" status="verified">nye dga’ </term>
-              <term xml:lang="bo">ཉེ་དགའ།</term>
-              <term xml:lang="Sa-Ltn" status="verified">Nanda</term>
-              <term type="definition">A nāga king present in the assembly of the Buddha Śākyamuni.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-064-005-193" type="person" mode="match">
+                            <term>Nanda</term>
+                            <term xml:lang="Bo-Ltn" status="verified">dga’ bo</term>
+                            <term xml:lang="bo">དགའ་བོ།</term>
+                            <term xml:lang="Sa-Ltn" status="verified">Nanda</term>
+                            <term type="definition">A nāga king present in the assembly of the Buddha Śākyamuni.</term>
+                        </gloss>
                     </item>
           <item tid="184">
                         <gloss mode="marked" type="person" xml:id="UT22084-064-005-194">
@@ -1788,13 +1789,13 @@
             </gloss>
                     </item>
           <item tid="233">
-                        <gloss type="person" xml:id="UT22084-064-005-243">
-              <term>Śaṅkha</term>
-              <term xml:lang="Bo-Ltn" status="verified">dung </term>
-              <term xml:lang="bo">དུང་།</term>
-              <term xml:lang="Sa-Ltn" status="verified">Kharakarṇa</term>
-              <term type="definition">A nāga king present in the assembly of the Buddha Śākyamuni.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-064-005-243" type="person" mode="match">
+                            <term>Śaṅkha</term>
+                            <term xml:lang="Bo-Ltn" status="verified">dung</term>
+                            <term xml:lang="bo">དུང་།</term>
+                            <term xml:lang="Sa-Ltn" status="verified">Śaṅkha</term>
+                            <term type="definition">A nāga king present in the assembly of the Buddha Śākyamuni.</term>
+                        </gloss>
                     </item>
           <item tid="234">
                         <gloss type="person" xml:id="UT22084-064-005-244">
