--- a/translations/kangyur/placeholders/091-036_toh639,879-the_incantation_of_the_one_hundred_and_eight_names_of_youthful_manjusri.xml
+++ b/translations/kangyur/placeholders/091-036_toh639,879-the_incantation_of_the_one_hundred_and_eight_names_of_youthful_manjusri.xml
@@ -17,9 +17,10 @@
                 <consultant role="dharmaMaster" ref="eft:person-199">Geshe Lozang Jamspal</consultant>
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
                 <author role="translatorEng" ref="eft:person-375">David Mellins</author>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2022</date>
+                <edition>v 0.0.8 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.f">
@@ -47,7 +48,19 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-09T08:22:14.278Z" user="admin">09/01/2023 08:22:14</note>    <note type="updated" update="translation-status" value="4" date-time="2022-02-22T14:37:54.25Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-22T14:37:54.25Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-19T12:29:09.08Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-19T12:29:09.08Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T12:30:22.538Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-19T12:30:48.462Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-19T12:31:25.969Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-09-14T09:30:03.088Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-14T09:30:03.088Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2023-01-09T08:22:08.744Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-09T08:22:08.744Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-09T08:22:42.564Z" user="admin">09/01/2023 08:22:42</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-02-22T14:37:54.25Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-22T14:37:54.25Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-05-19T12:29:09.08Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-19T12:29:09.08Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T12:30:22.538Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-19T12:30:48.462Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-19T12:31:25.969Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-09-14T09:30:03.088Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-14T09:30:03.088Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-01-09T08:22:08.744Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-09T08:22:08.744Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-09T08:22:37.036Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
