--- a/translations/kangyur/placeholders/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
+++ b/translations/kangyur/placeholders/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
@@ -10,14 +10,15 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacandragarbha­prajñāpāramitā­mahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa zla ba'i snying po shes rab kyi pha rol tu phyin pa theg pa chen po'i mdo rdzogs so</title>
                 <author role="translatorMain" ref="eft:team-79"/>
-                <consultant role="dharmaMaster" ref="eft:person-396">Geshe Dakpa Kalsang </consultant>
+                <consultant role="dharmaMaster" ref="eft:person-396">Geshe Dakpa Kalsang</consultant>
                 <consultant role="projectManager" ref="eft:person-395">Sanjib Kumar Das</consultant>
                 <author role="translatorEng" ref="eft:person-395">Sanjib Kumar Das</author>
                 <editor role="reviser" ref="eft:person-395">Sanjib Kumar Das</editor>
                 <editor role="proofreader" ref="eft:person-397">Ritiman Das</editor>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -36,7 +37,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-09T10:24:45.472Z" user="admin">09/01/2023 10:24:45</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-18T12:04:58.366Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T12:04:58.366Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T12:06:33.603Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T12:07:31.286Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-28T11:31:16.537Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-11-28T11:31:16.537Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-09T10:24:39.895Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-09T10:24:39.895Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-09T10:25:17.642Z" user="admin">09/01/2023 10:25:17</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-05-18T12:04:58.366Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T12:04:58.366Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T12:06:33.603Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T12:07:31.286Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-28T11:31:16.537Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-11-28T11:31:16.537Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-09T10:24:39.895Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-09T10:24:39.895Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-09T10:25:12.07Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
