--- a/translations/kangyur/placeholders/044-008_toh87-the_discourse_for_kasyapa.xml
+++ b/translations/kangyur/placeholders/044-008_toh87-the_discourse_for_kasyapa.xml
@@ -11,23 +11,29 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryakāśyapaparivarta­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="en">[Note: this work, in its own right, was known as the &lt;i&gt;Ratnakūṭasūtra&lt;/i&gt; in several Indian treatises, e.g. Mahāyānasūtralaṃkāra and Śikṣāsamuccaya.]</title>
             </titleStmt>
-            <publicationStmt status="">
+    <editionStmt>
+                <edition>v 0.0.2 <date>2021</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-044-008"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh87" type="text">
                     <ref>Toh 87</ref>
                     <biblScope>vol:44, ff.119v-151v(pp.238-302)</biblScope>
-                    <location count-pages="65">
-                        <start volume="44" page="240"/>
-                        <end volume="44" page="304"/>
+                    <location work="UT4CZ5369" count-pages="65">
+                        <volume number="44" start-page="238" end-page="302"/>
                     </location>
                     <idno parent-id="O1JC114941JC14667" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC11634" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:25:55 by admin</note>
+                <note type="lastUpdated" date-time="2023-01-09T12:21:32.568Z" user="admin">09/01/2023 12:21:32</note>
+    <note type="updated" update="translation-status" value="4" date-time="2021-10-25T13:11:16.518Z" user="line-tofte">4</note>
+    <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T13:11:16.518Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="2.h" date-time="2023-01-09T12:21:28.359Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-09T12:21:28.359Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
