--- a/translations/kangyur/placeholders/044-008_toh87-the_discourse_for_kasyapa.xml
+++ b/translations/kangyur/placeholders/044-008_toh87-the_discourse_for_kasyapa.xml
@@ -4,15 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">'od srungs kyi le'u/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">kāśyapaparivartasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Discourse for Kāśyapa</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'od srungs kyi le'u zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryakāśyapaparivarta­nāmamahāyānasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">kāśyapaparivartasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">'od srungs kyi le'u/</title>
                 <title type="otherTitle" xml:lang="en">[Note: this work, in its own right, was known as the &lt;i&gt;Ratnakūṭasūtra&lt;/i&gt; in several Indian treatises, e.g. Mahāyānasūtralaṃkāra and Śikṣāsamuccaya.]</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryakāśyapaparivarta­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'od srungs kyi le'u zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-34"/>
+                <author role="translatorEng" ref="eft:person-370">Taryn Sue</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2021</date>
+                <edition>v 0.0.3 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -31,9 +33,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-09T12:21:32.568Z" user="admin">09/01/2023 12:21:32</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-10-25T13:11:16.518Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T13:11:16.518Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="2.h" date-time="2023-01-09T12:21:28.359Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-09T12:21:28.359Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-09T12:25:17.366Z" user="admin">09/01/2023 12:25:17</note>
+                <note type="updated" update="translation-status" value="4" date-time="2021-10-25T13:11:16.518Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T13:11:16.518Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-01-09T12:21:28.359Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-09T12:21:28.359Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-01-09T12:25:15.919Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
