--- a/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
+++ b/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
@@ -10,15 +10,15 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasuvarṇavālukopama­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gser gyi bye ma lta bu zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="eft:team-27"/>
-                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
-                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
+                <consultant role="dharmaMaster" ref="eft:person-173">Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" ref="eft:person-173">Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" ref="eft:person-175">Chodrungma Kunga Chodron</author>
+                <consultant role="projectManager" ref="eft:person-175">Chodrungma Kunga Chodron</consultant>
                 <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-10T08:32:07.792Z" user="admin">10/01/2023 08:32:07</note>
+                <note type="lastUpdated" date-time="2023-01-10T08:33:20.66Z" user="admin">10/01/2023 08:33:20</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-11-09T15:38:30.759Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-09T15:38:30.759Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -48,6 +48,7 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-12-09T09:43:57.012Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-01-10T08:32:02.259Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-10T08:32:02.259Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-10T08:33:15.144Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
