--- a/translations/kangyur/placeholders/010-001_toh6-finer_points_of_discipline.xml
+++ b/translations/kangyur/placeholders/010-001_toh6-finer_points_of_discipline.xml
@@ -16,11 +16,11 @@
                 <sponsor ref="sponsors.xml#sponsor-40">胡作胜先生、王爱莲女士以及胡懿真小姐</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-010-001"/>
                 <date/>
             </publicationStmt>
@@ -40,9 +40,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-22T12:41:01.979Z" user="admin">22/11/2022 12:41:01</note>
+                <note type="lastUpdated" date-time="2023-01-10T12:19:53.718Z" user="admin">10/01/2023 12:19:53</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-22T12:40:57.773Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-01-10T12:19:48.158Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-01-10T12:19:48.158Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
