--- a/translations/kangyur/placeholders/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/placeholders/072-010_toh310-the_sutra_on_impermanence.xml
@@ -14,10 +14,10 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.20 <date>2021</date>
+                <edition>v 0.0.21 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-072-010"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-04T08:31:11.374Z" user="admin">04/01/2023 08:31:11</note>
+                <note type="lastUpdated" date-time="2023-01-10T13:13:04.968Z" user="admin">10/01/2023 13:13:04</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -64,6 +64,8 @@
                 <note type="updated" update="text-version" value="0.0.19" date-time="2023-01-03T14:47:09.668Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-01-04T08:31:05.767Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.20" date-time="2023-01-04T08:31:05.767Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-01-10T13:12:59.442Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.21" date-time="2023-01-10T13:12:59.442Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
