--- a/translations/kangyur/placeholders/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/placeholders/072-010_toh310-the_sutra_on_impermanence.xml
@@ -12,9 +12,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.21 <date>2021</date>
+                <edition>v 0.0.22 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.a">
@@ -33,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-10T13:13:04.968Z" user="admin">10/01/2023 13:13:04</note>
+                <note type="lastUpdated" date-time="2023-01-10T13:13:34.866Z" user="admin">10/01/2023 13:13:34</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -66,6 +67,7 @@
                 <note type="updated" update="text-version" value="0.0.20" date-time="2023-01-04T08:31:05.767Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2023-01-10T13:12:59.442Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.21" date-time="2023-01-10T13:12:59.442Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.22" date-time="2023-01-10T13:13:29.32Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
