--- a/translations/kangyur/placeholders/072-005_toh305-sutra_of_the_highest_designation.xml
+++ b/translations/kangyur/placeholders/072-005_toh305-sutra_of_the_highest_designation.xml
@@ -4,17 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mchog tu gdags pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn"/>
                 <title type="mainTitle" xml:lang="en">Sūtra of the Highest Designation</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mchog tu gdags pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="en">(no Sanskrit title, translated from the Chinese)</title>
-                <author role="translatorMain" ref="contributors.xml#team-50"/>
-                <consultant role="projectManager" ref="contributors.xml#person-316">Giuliano Francisco Proença</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-316">Giuliano Francisco Proença</author>
-                <editor role="reviser" ref="contributors.xml#person-359">Daniela Espíndola</editor>
+                <author role="translatorMain" ref="eft:team-50"/>
+                <consultant role="projectManager" ref="eft:person-316">Giuliano Francisco Proença</consultant>
+                <author role="translatorEng" ref="eft:person-316">Giuliano Francisco Proença</author>
+                <editor role="reviser" ref="eft:person-359">Daniela Espíndola</editor>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2021</date>
+                <edition>v 0.0.6 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -33,13 +33,16 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-31T14:07:06.767Z" user="admin">31/05/2022 14:07:06</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-08-04T12:43:53.916Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-04T12:43:53.916Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-09-01T13:51:37.257Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-09-01T13:51:37.257Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-01T13:51:59.511Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-09-01T13:52:43.387Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-05-31T14:06:58.574Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-31T14:06:58.574Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-10T15:55:09.104Z" user="admin">10/01/2023 15:55:09</note>
+                <note type="updated" update="translation-status" value="4" date-time="2021-08-04T12:43:53.916Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-04T12:43:53.916Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-09-01T13:51:37.257Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-09-01T13:51:37.257Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-01T13:51:59.511Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-09-01T13:52:43.387Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-05-31T14:06:58.574Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-31T14:06:58.574Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-10T15:55:03.566Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
