--- a/translations/kangyur/placeholders/034-014_toh26-the_perfection_of_wisdom_for_suryagarbha.xml
+++ b/translations/kangyur/placeholders/034-014_toh26-the_perfection_of_wisdom_for_suryagarbha.xml
@@ -17,10 +17,10 @@
                 <editor role="proofreader" ref="eft:person-397">Ritiman Das</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2022</date>
+                <edition>v 0.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-034-014"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-28T11:30:17.121Z" user="admin">28/11/2022 11:30:17</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-18T11:25:29.991Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T11:25:29.991Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T11:26:04.203Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T11:27:29.965Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-28T11:30:11.605Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-11-28T11:30:11.605Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-11T08:33:28.981Z" user="admin">11/01/2023 08:33:28</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-18T11:25:29.991Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T11:25:29.991Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T11:26:04.203Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T11:27:29.965Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-28T11:30:11.605Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-11-28T11:30:11.605Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-11T08:33:23.432Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-11T08:33:23.432Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
